--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.1.7"
+    "lodash": "^4.17.10",
+    "mongoose": "^5.1.7",
+    "mongoose-unique-validator": "^2.0.1"
   }
 }
