--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGODB_URL=mongodb://localhost/pathfinder
 JWT_SECRET=secretkeyhere
+HOST=http://localhost:3000
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=1f82ece81cfb96
+EMAIL_PASS=6bf225c986920e
