--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.7",
-    "mongoose-unique-validator": "^2.0.1"
+    "mongoose-unique-validator": "^2.0.1",
+    "nodemailer": "^4.6.7"
   }
 }
